@@ -1,6 +1,10 @@
 release 1.1.5 (2010)
 
 release 1.1.4 (2009-11)
+- Fixed issue 406
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=406
+  FormDataBodyPart.getValue will honor the charset parameter of the media
+  type associated with the body part.
 - Fixed issue 232
   https://jersey.dev.java.net/issues/show_bug.cgi?id=232
   The characters '{' and '}' are percent encoded if a URI is built using
